# work-break

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install_icons.sh
.github/workflows/: release.yml
extra/linux/etc/xdg/autostart/: Work-break.desktop
extra/linux/usr/share/applications/: Work-break.desktop
extra/osx/Work-break.app/Contents/: Info.plist
extra/osx/Work-break.app/Contents/MacOS/: work-break.command
extra/osx/Work-break.app/Contents/Resources/: work-break.icns
src/: activities.rs  app.rs  args.rs  config.rs  main.rs  math.rs
windows/: work-break.rc
