[package]
name = "work-break"
version = "0.1.0"
edition = "2021"
description = "Work-break balancer for XFCE desktop environment"
license = "MIT"
authors = ["Sergei Shadoy <shadoysv@gmail.com>"]
repository = "https://github.com/ShadoySV/work-break"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
confy = "0.5"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
