[package]
name = "work-break"
version = "0.6.1"
edition = "2021"
description = "Work-break balancer for Windows / MacOS / Linux desktops"
license = "MIT"
authors = ["Sergei Shadoy <shadoysv@gmail.com>"]
repository = "https://github.com/ShadoySV/work-break"
keywords = ["productivity", "app", "cross-platform", "time-tracker"]

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
confy = "0.5"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
interprocess = "1.2.1"
ron = "0.8.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
notify-rust = "4.8.0"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.2.0"
